dim/spec/test_input/invalid_input/missing_config_entry_attribute.dim
Config:
  - originator: CompanyName
    files: abc
